--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: workshop
 root: .
-venue: FIXME      # brief name of host site
-address: FIXME    # street address of home location
-country: FIXME    # country (hyphenated if need be, like 'United-Kingdom')
-language: FIXME   # language code like 'en' or 'fr'
-latlng: FIXME     # fractional latitude and longitude like 41.7901128,-87.6007318
-humandate: FIXME  # use the format 'Feb 17-18, 2020' (without the quotes)
-humantime: FIXME  # use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate: FIXME  # use YYYY-MM-DD format like 2015-01-01
-enddate: FIXME    # use YYYY-MM-DD format like 2015-01-02
-instructor: FIXME # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+venue: University of Chicago      # brief name of host site
+address: Stuart 101, 5835 South Greenwood Avenue Chicago, IL 60637    # street address of home location
+country: United-States    # country (hyphenated if need be, like 'United-Kingdom')
+language: en   # language code like 'en' or 'fr'
+latlng: 41.788401, -87.599099     # fractional latitude and longitude like 41.7901128,-87.6007318
+humandate: Sep 15-16 2015  # use the format 'Feb 17-18, 2020' (without the quotes)
+humantime: 8:30 am - 4:30 pm  # use the format '9:00 am - 4:30 pm' (without the quotes)
+startdate: 2015-09-15  # use YYYY-MM-DD format like 2015-01-01
+enddate: 2015-09-16    # use YYYY-MM-DD format like 2015-01-02
+instructor: ["John Blischak", "Emily Davenport"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: FIXME     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: FIXME    # contact email address for workshop organizer
+contact: jdblischak@uchicago.edu    # contact email address for workshop organizer
 etherpad:   # optional (insert the URL for your Etherpad if you're using one)
 eventbrite: # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
 ---
