--- a/index.html
+++ b/index.html
@@ -142,25 +142,29 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Sep 15</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr><td>08:00 am - 08:30 am - Installation help</td></tr>
+      <tr><td>08:30 am - 10:00 am - Review of Unix shell and R</td></tr>
+      <tr><td>10:00 am - 10:30 am - Coffee break</td></tr>
+      <tr><td>10:30 am - 12:00 pm - Writing reproducible reports</td></tr>
+      <tr><td>12:00 pm - 01:00 pm - Lunch</td></tr>
+      <tr><td>01:00 pm - 02:30 pm - Analyzing data with dplyr</td></tr>
+      <tr><td>02:30 pm - 03:00 pm - Coffee break</td></tr>
+      <tr><td>03:00 pm - 04:30 pm - Visualizing data with ggplot2</td></tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Sep 16</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr><td>08:00 am - 08:30 am - Installation help</td></tr>
+      <tr><td>08:30 am - 10:00 am - Version control with Git</td></tr>
+      <tr><td>10:00 am - 10:30 am - Coffee break</td></tr>
+      <tr><td>10:30 am - 12:00 pm - Version control with Git</td></tr>
+      <tr><td>12:00 pm - 01:00 pm - Lunch</td></tr>
+      <tr><td>01:00 pm - 02:30 pm - Debugging</td></tr>
+      <tr><td>02:30 pm - 03:00 pm - Coffee break</td></tr>
+      <tr><td>03:00 pm - 04:30 pm - Defensive programming</td></tr>
     </table>
   </div>
 </div>
