Update Setup directions.

--- a/index.html
+++ b/index.html
@@ -420,6 +420,9 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
         and double click on the file to run it.
         <strong>This installer requires an active internet connection.</strong>
       </p>
+<!-- 
+    Not necessary. Will use nano for the Unix shell and Git sections. Will use
+    RStudio for writing R code.
       <p>
         Others editors that you can use are
         <a href="http://notepad-plus-plus.org/">Notepad++</a> or
@@ -428,6 +431,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
           add its installation directory to your system path.</strong>
         Please ask your instructor to help you do this.
       </p>
+-->
     </div>
     <div class="col-md-4">
       <h4 id="editor-macosx">Mac OS X</h4>
@@ -435,11 +439,13 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
         nano is a basic editor and the default that instructors use in the workshop.
         It should be pre-installed.
       </p>
+<!--
       <p>
         Others editors that you can use are
         <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a> or
         <a href="http://www.sublimetext.com/">Sublime Text</a>.
       </p>
+-->
     </div>
     <div class="col-md-4">
       <h4 id="editor-linux">Linux</h4>
@@ -447,20 +453,24 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
         nano is a basic editor and the default that instructors use in the workshop.
         It should be pre-installed.
       </p>
+<!--
       <p>
         Others editors that you can use are
         <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>,
         <a href="http://kate-editor.org/">Kate</a> or
         <a href="http://www.sublimetext.com/">Sublime Text</a>.
       </p>
+-->
     </div>
   </div>
 </div> <!-- End of 'editor' section. -->
 
-<div id="python"> <!-- Start of 'Python' section. Remove the third paragraph if
+
+<!-- Start of 'Python' section. Remove the third paragraph if
            the workshop will teach Python using something other than
            the IPython notebook.
-           Details at http://ipython.org/ipython-doc/2/install/install.html#browser-compatibility -->
+           Details at http://ipython.org/ipython-doc/2/install/install.html#browser-compatibility
+<div id="python"> 
   <h3>Python</h3>
 
   <p>
@@ -556,7 +566,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   please go to <a href="setup/index.html">this page</a>,
   which has instructions on how to test that everything was installed correctly.
   </p>
-</div> <!-- End of 'Python' section. -->
+</div> End of 'Python' section. -->
 
 <div id="r"> <!-- Start of 'R' section. -->
   <h3>R</h3>
@@ -603,7 +613,8 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   </div>
 </div> <!-- End of 'R' section. -->
 
-<div id="sql"> <!-- Start of 'SQLite' section. -->
+<!-- Start of 'SQLite' section.
+<div id="sql"> 
   <h3>SQLite</h3>
 
   <p>
@@ -638,7 +649,8 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <pre>readline</pre></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
-</div> <!-- End of 'SQLite' section. -->
+</div> End of 'SQLite' section. -->
+
 
 <!--
   Uncomment this section if you are using our virtual machine.
