--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
 </iframe>
 {% endif %}
 
-<h2>General Information</h2>
+<h2 id ="general-information">General Information</h2>
 
 <!--
   INTRODUCTION
@@ -138,7 +138,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   to match your plans.  You may also want to change 'Day 1' and 'Day
   2' to be actual dates or days of the week.
 -->
-<h2>Schedule</h2>
+<h2 id="schedule">Schedule</h2>
 
 <div class="row">
   <div class="col-md-6">
@@ -251,6 +251,8 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   by including assertion statements to check code behavior, and writing tests
   that can be run automatically.
 <p>
+
+<hr/>
 
 <!--
   SETUP
