Add faculty advisors and administrator.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   <a href="{{site.swc_site}}/conduct.html">Code of Conduct</a>.
 </p>
 
+<p>
+  <strong>Faculty advisors:</strong>
+  Matthew Stephens, Allan Drummond, Mark Abney 
+</p>
+
+<p>
+  <strong>Administrator:</strong>
+  Candice Lewis 
+</p>
+
 <!--
   CONTACT EMAIL ADDRESS
 
