Specify that registration is restricted to BSD researchers and add prerequisites.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
 -->
 <p>
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is limited to graduate students and other researchers in the Biological Sciences Division at the University of Chicago.
+</p>
+
+<p>
+  <strong>Prerequisites:</strong>
+  Attendees should be familiar with the basics of navigating a filesystem in a Unix-like shell and writing functions and loops in R.
 </p>
 
 <!--
