--- a/index.html
+++ b/index.html
@@ -596,6 +596,19 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   </div>
 </div> <!-- End of 'R' section. -->
 
+<div id="r-packages">
+  <h3>R packages</h3>
+  <p>
+    Please install the following R packages using <code>install.packages</code>:
+    <ul>
+      <li><a href="https://cran.r-project.org/web/packages/dplyr/index.html">dplyr</a></li>
+      <li><a href="https://cran.r-project.org/web/packages/ggplot2/index.html">ggplot2</a></li>
+      <li><a href="https://cran.r-project.org/web/packages/testit/index.html">dplyr</a></li>
+    </ul>
+  </p>
+
+</div>
+
 <!-- Start of 'SQLite' section.
 <div id="sql"> 
   <h3>SQLite</h3>
