Add funding information.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
 </p>
 
 <p>
+  <strong>Funding:</strong>
+  This workshop was made possible through the generous sponsorhip of the <a href="http://gradprograms.bsd.uchicago.edu/our_office.html">Office of Graduate and Postdoctoral Affairs</a> and the <a href = "http://genes.uchicago.edu/">Department of Human Genetics</a>.
+</p>
+
+<p>
   <strong>Faculty advisors:</strong>
   Matthew Stephens, Allan Drummond, Mark Abney 
 </p>
