--- a/index.html
+++ b/index.html
@@ -51,21 +51,17 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   the pitch.
 -->
 <p>
-  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission
-  is to help scientists and engineers get more research done in less
-  time and with less pain by teaching them basic lab skills for
-  scientific computing.  This hands-on workshop will cover basic
-  concepts and tools, including program design, version control, data
-  management, and task automation.  Participants will be encouraged to
-  help one another and to apply what they have learned to their own
-  research problems.
-</p>
-<p align="center">
-  <em>
-    For more information on what we teach and why,
-    please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
-  </em>
+  <a href="{{site.swc_site}}">Software Carpentry</a>'s mission is to help
+  scientists and engineers get more research done in less time and with less
+  pain by teaching them basic lab skills for scientific computing. This hands-on
+  workshop is aimed at intermediate programmers that know the basics of R and
+  want to learn more. It is ideal for past attendees of our novice Software
+  Carpentry workshops
+  (e.g. <a href="http://jdblischak.github.io/2013-09-19-chicago/">2013</a>, <a href="http://jdblischak.github.io/2014-09-18-chicago">2014</a>),
+  incoming graduate students that attended
+  the <a href="http://gradprograms.bsd.uchicago.edu/current_students/MBLBootcamp.html">MBL
+  bootcamp</a>, and graduate students or postdocs that currently use R for
+  their research.
 </p>
 
 <!--
