Small fix to Syllabus description.

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
   We will cover how to track code development using the version control software
   Git. This facilitates both experimenting with new ideas and the ability to
   reproduce past results with a specific version of the code. Furthermore, we
-  will teach them how to share their code online and collaborate using the
+  will teach how to share their code online and collaborate using the
   website GitHub.
 </p>
 
