Fix typo in installation instructions.

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ eventbrite: # optional (delete this if not used, otherwise uncomment and provide
     <ul>
       <li><a href="https://cran.r-project.org/web/packages/dplyr/index.html">dplyr</a></li>
       <li><a href="https://cran.r-project.org/web/packages/ggplot2/index.html">ggplot2</a></li>
-      <li><a href="https://cran.r-project.org/web/packages/testit/index.html">dplyr</a></li>
+      <li><a href="https://cran.r-project.org/web/packages/testit/index.html">testit</a></li>
     </ul>
   </p>
 
