--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["John Blischak", "Emily Davenport"] # list of names like ["Kay McNu
 helper: [""]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: jdblischak@uchicago.edu    # contact email address for workshop organizer
 etherpad:   # optional (insert the URL for your Etherpad if you're using one)
-eventbrite: # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
+eventbrite: 18035804577 # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
 ---
 <!--
   HEADER
