Note that coffee and lunch will be provided.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@ eventbrite: 18035804577 # optional (delete this if not used, otherwise uncomment
   their research.
 </p>
 
+<p>
+  Coffee and lunch will be provided both days.
+</p>
+
 <!--
   AUDIENCE
 
