Use link to Eventbrite page instead of wideget.
Widget bypasses the password.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ instructor: ["John Blischak", "Emily Davenport"] # list of names like ["Kay McNu
 helper: [""]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: jdblischak@uchicago.edu    # contact email address for workshop organizer
 etherpad:   # optional (insert the URL for your Etherpad if you're using one)
-eventbrite: 18035804577 # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
+eventbrite: # 18035804577 # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
 ---
 <!--
   HEADER
@@ -41,6 +41,14 @@ eventbrite: 18035804577 # optional (delete this if not used, otherwise uncomment
   scrolling="auto">
 </iframe>
 {% endif %}
+
+<h2 id ="registration">Registration</h2>
+
+<p>
+  Registration is required and is limited to those affiliated with the
+  Biological Sciences Division. Please register
+  at <a href="https://2015-09-15-chicago.eventbrite.com">2015-09-15-chicago.eventbrite.com</a>.
+</p>
 
 <h2 id ="general-information">General Information</h2>
 
