--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 8:00 am - 4:30 pm  # use the format '9:00 am - 4:30 pm' (without the 
 startdate: 2015-09-15  # use YYYY-MM-DD format like 2015-01-01
 enddate: 2015-09-16    # use YYYY-MM-DD format like 2015-01-02
 instructor: ["John Blischak", "Emily Davenport"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: [""]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Nick Knoblauch", "Sahar Mozaffari"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: jdblischak@uchicago.edu    # contact email address for workshop organizer
 etherpad:   # optional (insert the URL for your Etherpad if you're using one)
 eventbrite: # 18035804577 # optional (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
