--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@ eventbrite: # 18035804577 # optional (delete this if not used, otherwise uncomme
       <li><a href="https://cran.r-project.org/web/packages/dplyr/index.html">dplyr</a></li>
       <li><a href="https://cran.r-project.org/web/packages/ggplot2/index.html">ggplot2</a></li>
       <li><a href="https://cran.r-project.org/web/packages/testit/index.html">testit</a></li>
+      <li><a href="https://cran.r-project.org/web/packages/rmarkdown/index.html">rmarkdown</a></li>
     </ul>
   </p>
 
