--- a/index.html
+++ b/index.html
@@ -197,6 +197,21 @@ eventbrite: # 18035804577 # optional (delete this if not used, otherwise uncomme
   </div>
 </div>
 
+
+<div id="links">
+  <h3>Useful Links</h3>
+  <p>
+    The following links will be useful during the workshop:
+    <ul>
+      <li>We have a <a href="https://www.dropbox.com/sh/5c9vez8lhu1xumk/AADu4BQdb4447on2FQ-aJ_OXa?dl=0">dropbox</a> folder that will contain the scripts we are creating and text file of the history of the git lessons.</li>
+      <li>Here are two datasets <a href="https://raw.githubusercontent.com/jdblischak/r-intermediate-altmetrics/gh-pages/data/counts-raw.txt.gz">(raw)</a> and <a href="https://raw.githubusercontent.com/jdblischak/r-intermediate-altmetrics/gh-pages/data/counts-norm.txt.gz">(normalized)</a> that we will use in the R section. Right click to save as and save in the altmetrics/data folder.</li>
+      <li>Here is a link to the <a href="https://jdblischak.github.io/r-intermediate-altmetrics/">R lesson material</a>.</li>
+      <li>Here is a link to the <a href="http://erdavenport.github.io/git-lessons/index.html">git lesson material</a>.</li>
+    </ul>
+  </p>
+
+</div>
+ 
 <!--
   ETHERPAD
 
